--- a/styles/main.scss
+++ b/styles/main.scss
@@ -18,6 +18,8 @@ body {
     border-radius: 10px;
     margin: 3rem 0;
     @include flex-centering(column);
+    // justify-content: flex-start;
+    // gap: 1rem;
 
     &__hero {
         position: relative;
@@ -32,6 +34,8 @@ body {
     }
 
     &__heading {
+        text-align: center;
+        padding: 1rem;
 
         &--highlight {
             color: $accent-color;
@@ -39,17 +43,36 @@ body {
     }
 
     &__description {
-
+        margin-top: 0;
+        width: 30ch;
+        text-align: center;
+        font-family: $site-font-alt;
+        color: $stat-headings;
+        line-height: 1.5;
     }
 
     &__list {
-
+        margin: 0;
+        padding: 0;
+        list-style: none;
+        @include flex-centering(column);
+        gap: 1rem;
+        text-align: center;
+        margin-bottom: 2rem;
     }
 
     &__stat {
+        text-transform: uppercase;
+        font-size: 0.8rem;
+        letter-spacing: 1px;
+        color: $stat-headings;
+        line-height: 1.5;
 
         &--number {
-
+            font-family: $site-font;
+            font-weight: 700;
+            font-size: 2rem;
+            color: $headings-and-stats;
         }
     }
 }
