--- a/styles/main.css
+++ b/styles/main.css
@@ -15,6 +15,15 @@ body {
   align-items: center;
 }
 
+.attribution {
+  font-size: 11px;
+  text-align: center;
+}
+
+.attribution a {
+  color: #3e52a3;
+}
+
 .stats-card {
   background-color: #1b1938;
   width: 90vw;
@@ -25,6 +34,24 @@ body {
   justify-content: center;
   align-items: center;
 }
+@media screen and (min-width: 768px) {
+  .stats-card {
+    flex-direction: row-reverse;
+  }
+}
+.stats-card__content-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-basis: 50%;
+}
+@media screen and (min-width: 768px) {
+  .stats-card__content-wrapper {
+    align-items: flex-start;
+    padding: 3rem 0 3rem 5rem;
+  }
+}
 .stats-card__hero {
   position: relative;
   width: 90vw;
@@ -34,9 +61,23 @@ body {
   background-color: #aa5cdb;
   background-blend-mode: multiply;
 }
+@media screen and (min-width: 768px) {
+  .stats-card__hero {
+    flex-basis: 50%;
+    height: 25.1875rem;
+    border-radius: 0 10px 10px 0;
+  }
+}
 .stats-card__heading {
   text-align: center;
   padding: 1rem;
+}
+@media screen and (min-width: 768px) {
+  .stats-card__heading {
+    text-align: left;
+    padding: 0;
+    width: 18ch;
+  }
 }
 .stats-card__heading--highlight {
   color: #aa5cdb;
@@ -48,6 +89,12 @@ body {
   font-family: "Lexend Deca", sans-serif;
   color: rgba(255, 255, 255, 0.6);
   line-height: 1.5;
+}
+@media screen and (min-width: 768px) {
+  .stats-card__description {
+    text-align: left;
+    width: 40ch;
+  }
 }
 .stats-card__list {
   margin: 0;
@@ -61,12 +108,23 @@ body {
   text-align: center;
   margin-bottom: 2rem;
 }
+@media screen and (min-width: 768px) {
+  .stats-card__list {
+    flex-direction: row;
+    flex-basis: 100%;
+  }
+}
 .stats-card__stat {
   text-transform: uppercase;
   font-size: 0.8rem;
   letter-spacing: 1px;
   color: rgba(255, 255, 255, 0.6);
   line-height: 1.5;
+}
+@media screen and (min-width: 768px) {
+  .stats-card__stat {
+    flex-grow: 1;
+  }
 }
 .stats-card__stat--number {
   font-family: "Inter", sans-serif;
